<resources>
    <string name="app_name">Game Center</string>
    <string name="gameCenterLogo_contentDescription">PM_GameCenter</string>
    <string name="gameCenterBG_contentDescription">PM_GameCenter</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="button_continue">CONTINUE</string>
    <string name="popup_loginFailed_Title">LOGIN FAILED!</string>
    <string name="popup_loginFailed_Description">The username or the password you entered is not correct. Please, try again.</string>
    <string name="popup_registerFailed_Title">REGISTRATION FAILED!</string>
    <string name="popup_registerFailed_Description">The username you entered already exists. Please, try another username.</string>
    <string name="popup_registerSuccess_Title">SUCCESS!</string>
    <string name="popup_registerSuccess_Description">The registration succeeded, to login press the bottom button.</string>
    <string name="popup_gameWin_Title">YOU WON!</string>
    <string name="popup_gameWin_Description">Congratulations you won the game!</string>
    <string name="popup_gameLost_Title">YOU LOST!</string>
    <string name="popup_gameLost_Description">Come on, you can do it better! Try again!</string>
    <string name="gameCard1_Title">2048</string>
    <string name="gameCard1_Description">Combine tiles with matching numbers to reach 2048</string>
    <string name="gameCard2_Title">Senku</string>
    <string name="gameCard2_Description">Clear the board of pegs by jumping them over each other, leaving only one remaining</string>


</resources>