<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/dim_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_gameover_title"
                style="@style/PopupTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_gameLost_Title" />

            <TextView
                android:id="@+id/popup_gameover_description"
                style="@style/PopupTitleDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_gameLost_Description" />
        </LinearLayout>

        <Button
            android:id="@+id/popup_gameover_button"
            style="@style/DefaultButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_continue" />


    </LinearLayout>

</FrameLayout>