<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/gameCenterBG_contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/bmp_gamecenter_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/gameCenterBG_contentDescription"
            android:src="@drawable/bmp_gamecenter_logo" />

        <Button
            android:id="@+id/login_button"
            style="@style/DefaultButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/register_button"
            style="@style/DefaultButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register" />


    </LinearLayout>

</FrameLayout>