<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/gameCenterBG_contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/bmp_gamecenter_background" />

    <LinearLayout
        android:id="@+id/leaderboards_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/leaderboard_game1"
            style="@style/LeaderboardStyle">

            <TextView
                android:id="@+id/leaderboard_game1_title"
                style="@style/LeaderboardTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameCard1_Title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboard_game1_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboard_game2"
            style="@style/LeaderboardStyle">
        <TextView
                android:id="@+id/leaderboard_game2_title"
                style="@style/LeaderboardTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameCard2_Title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboard_game2_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>




    </LinearLayout>

</FrameLayout>